making it dynamic 1 (not blog)

--- a/wp-website/wp-content/themes/theme00/style.css
+++ b/wp-website/wp-content/themes/theme00/style.css
@@ -63,6 +63,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	display: block;
 	float: left;
 	width: 100%;
+	color: #202020;
 }
 
 .main-navigation ul {
